ZumZumFinancials_Dev1/src/objects/Recurring_Transaction__c.object
<CustomObject>
    <description>// Made by Fatima
used in Recurring page</description>
    <fields>
        <fullName>Bank_Nominal_Account__c</fullName>
        <label>Bank Nominal Account</label>
        <referenceTo>Nominal_Account__c</referenceTo>
        <relationshipLabel>Recurring Transactions</relationshipLabel>
        <relationshipName>Bank_Recurring_Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Finish_Date__c</fullName>
        <label>Finish Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Frequency_Period__c</fullName>
        <label>Frequency Period</label>
        <picklist>
            <picklistValues>
                <fullName>Day</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Week</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Month</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Frequency__c</fullName>
        <label>Frequency</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Last_Posted__c</fullName>
        <label>Last Posted</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Net_Amount__c</fullName>
        <label>Net Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Nominal_Account__c</fullName>
        <label>Nominal Account</label>
        <referenceTo>Nominal_Account__c</referenceTo>
        <relationshipLabel>Recurring Transactions (Nominal Account)</relationshipLabel>
        <relationshipName>Recurring_Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Suspend_Posting__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Suspend Posting</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Total_Required_Postings__c</fullName>
        <label>Total Required Postings</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Transaction_Details__c</fullName>
        <label>Transaction Details</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Transaction_Reference__c</fullName>
        <label>Transaction Reference</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transaction_Type__c</fullName>
        <label>Transaction Type</label>
        <picklist>
            <picklistValues>
                <fullName>BankCashCreditCardPayment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BankCashCreditCardReceipt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BankCashCreditCardTransfer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CustomerPaymentonAccount</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>VAT__c</fullName>
        <label>VAT</label>
        <referenceTo>Tax_Rate__c</referenceTo>
        <relationshipLabel>Recurring Transactions</relationshipLabel>
        <relationshipName>Recurring_Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Vat_Amount__c</fullName>
        <label>Vat Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Recurring Transaction</label>
    <nameField>
        <label>Recurring Transactions Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Recurring Transactions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>